# claudelab

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.claude/: settings.local.json
claudelab/: __init__.py  __main__.py  agents.py  cli.py  colors.py  detector.py  iso_office.py  main.py  office.py  palette.py  pixelbuffer.py  renderer.py  sixel.py  sprites.py  voxel_office.py
claudelab/scenes/: __init__.py  building.py  coding.py  debugging.py  idle.py  iso_building.py  iso_coding.py  iso_debugging.py  iso_idle.py  iso_running.py  iso_thinking.py  running.py  thinking.py  voxel_building.py  voxel_coding.py  voxel_debugging.py  voxel_idle.py  voxel_running.py  voxel_thinking.py
hooks/: claudelab-hook.sh
website/: .dockerignore  Dockerfile  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json
website/src/: App.css  App.jsx  index.css
website/src/assets/: ascii-frames.js  voxel-frames.js
website/src/components/: Demo.css  Demo.jsx  Features.css  Features.jsx  Footer.css  Footer.jsx  Hero.css  Hero.jsx  HowItWorks.css  HowItWorks.jsx  Installation.css  Installation.jsx
