[build-system]
requires = ["setuptools>=68.0,<77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claudelab"
version = "0.1.7"
description = "A visual terminal companion for Claude Code — animated isometric 2.5D office with AI engineers working"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Ovidiu", email = "nubiraorg@gmail.com"}]
keywords = ["claude", "claude-code", "terminal", "tui", "isometric", "pixel-art", "animation", "companion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console :: Curses",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
    "Operating System :: POSIX :: Linux",
]

[tool.setuptools.packages.find]
include = ["claudelab*"]

[tool.setuptools.package-data]
claudelab = ["hooks/*.sh"]

[project.urls]
Homepage = "https://claudelab.dev"
Repository = "https://github.com/ovexro/claudelab"

[project.scripts]
claudelab = "claudelab.main:main"
